tests/valid/definite/ListAssign_Valid_1.whiley
void System::main([string] args):
    [int] arr1
    [int] arr2
    arr1 = [1,2,3]
    arr2 = arr1
    arr2[2] = 2
    assert arr2[2] != |arr1|
    print str(arr1)
    print str(arr2)
    
