tests/invalid/ListAssign_Invalid_3.whiley

method main() :
    int[] arr1 = [1, 2, 4]
    int[] arr2 = arr1
    arr2[2] = 3
    assert arr2[2] != |arr1|
